fix font size on mobile

--- a/cv/responsive.less
+++ b/cv/responsive.less
@@ -10,7 +10,7 @@
 @topheight: 30mm;
 @pageheight: 297mm;
 @pagewidth: 210mm;
-@responsivetopheight: 8rem;
+@responsivetopheight: 7.5rem;
 
 * {
   background-repeat: no-repeat;
